2013-07-10 John Wu <John dot Wu at ACM dot org>
	* src/ikeywords.h: update the documentation about indexing
	set-valued columns
	* src/selectParser.yy: change keyword "distinct" to "countd" to
	avoid the confusion with the standard SQL keyword distinct

2013-06-20 John Wu <John dot Wu at ACM dot org>
	* src/ibin.cpp:4491 retry fopen with the file assumed to be in the
	current data directory of the data partition (so avoid assuming
	full path)
	* src/irelic.cpp: initialize offset64 in the special case
	constructors
	* src/ixfuzz.cpp:769 add test for both offset64 and offset32 being
	empty (per suggestion of Per Christian Engberg)
	* src/whereClause.cpp, src/selectClause.cpp: add macro
	FASTBIT_HALT_ON_PARSER_ERROR to satisfy the request from Steven
	Enns

2013-06-19 John Wu <John dot Wu at ACM dot org>
	* src/ibin.cpp:6504 add conditional compilation macro
	FASTBIT_ESTIMATION_IGNORE_COST to allow estimation to always
	continue with the equality binned index

2013-06-15 John Wu <John dot Wu at ACM dot org>
	* src/ibin.cpp:3529-3530 free the granule object to address the
	memory leak problem reported by Amihay Gonen

2013-06-14 John Wu <John dot Wu at ACM dot org>
	* src/util.cpp:2132 replace fprintf with fwrite (in hope to avoid
	deadlock during closing of the logger object on windows, not sure
	what exactly was going on, but have seen it stuck in fprintf)
	* src/category.cpp:1473 initialize nold to 0 to avoid problem with
	incorrect values later
	* src/ibin.cpp: in bin::convertGranules add code to delete the bit
	vectors that are not copied to bits - they were lost in the
	previous version

2013-06-13 John Wu <John dot Wu at ACM dot org>
	* src/parti.cpp: in function append1 move the section of code that
	clears the existing list of columns to be after the call of
	appendToBackup (to provide an opportunity for appendToBackup to
	produce a combined list of columns, a problem reported by Mark
	Hansen mark at digitalbrandmine.com)